# Terraform_remote_execution

./: .gitignore  .terraform.lock.hcl  README.md  backend.tf  data.tf  locals.tf  output.tf  provider.tf  remote-tf.sh  s3_state_bucket.tf  security_group.tf  vars.tf
EC2_Version/: README.md  backend.tf  data.tf  remotf.sh  role.tf  runner.tf  vars.tf
ECS_Version/: README.md  pyproject.toml
ECS_Version/image_setup/: Dockerfile  buildspec.yml  entrypoint.sh
ECS_Version/infra_setup/: .terraform.lock.hcl  CodeBuild.tf  ECR.tf  ECS.tf  S3.tf  backend.tf  data.tf  kms.tf  locals.tf  outputs.tf  roles.tf  security_group.tf  vars.tf
ECS_Version/remotf-cli/: main.py
ECS_Version/remotf_cli/: main.py
ECS_Version/remotf_cli/aws/: codebuild.py  ecs.py
ECS_Version/remotf_cli/commands/: execute.py  setup.py
ECS_Version/remotf_cli/core/: archive.py  hashing.py  shell.py  state.py
